[gd_scene load_steps=7 format=3 uid="uid://dtjrjpehlt47h"]

[ext_resource type="Script" uid="uid://dq0w5cx58ippp" path="res://enemy.gd" id="1_4gyqm"]
[ext_resource type="Texture2D" uid="uid://blhfoep1umuhy" path="res://Simple Tower Defense/Enemies/spr_bat.png" id="1_7k104"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7k104"]
radius = 5.0

[sub_resource type="Animation" id="Animation_4gyqm"]
length = 0.001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_7k104"]
resource_name = "fly"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qi2p4"]
_data = {
&"RESET": SubResource("Animation_4gyqm"),
&"fly": SubResource("Animation_7k104")
}

[node name="Enemy" type="Area2D"]
script = ExtResource("1_4gyqm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7k104")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7k104")
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_qi2p4")
}
autoplay = "fly"

[node name="AttackCooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
